--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0px;
+    background-color: #f7f7f7;
 }
 
 .alert {
@@ -48,9 +49,4 @@ input {
     cursor: pointer;
 }
 
-.landingButton {
-    padding: 10px;
-    background-color: #6666ff;
-    font: inherit;
-    
-}
+
